	New Quest System and core support of it (Elf)
	getClosestFreeTile function bumps - possibility to check does destination tile belongs to a house and extended position addon (Elf)
	Spell parameters working as in Tibia (Elf)
	Quest outfits (Elf)
	NPC descriptions (Elf)
	New onPrepareDeath creature event- no overflows and FALSE return denies death (Elf)
]

[ Deprecated
	[ Note
		All deprecated Lua functions are stored in compat.lua and use their equivalents, nevertheless please use proper ones for new scripts.
	]

	LuaFunction: savePlayers(), use saveData().
	LuaFunction: doPlayerAddMana(cid, mana), use doCreatureAddMana(cid, mana)
	LuaFunction: broadcastMessage(cid, type), use doBroadcastMessage(cid, type)
	LuaFunction: getPlayerPosition(cid), use getCreaturePosition(cid)
	LuaFunction: getPlayerName(cid), use getCreatureName(cid)
	LuaFunction: getCreaturePos(cid) [fake], use getCreaturePosition(cid)
	LuaFunction: saveData(), use saveServer()
	LuaFunction: doPlayerRemovePremiumDays(cid, days), use: doPlayerAddPremiumDays(cid, -days) [negative values]
	LuaFunction: doPlayerRemOutfit(cid, looktype, addons), use: doPlayerRemoveOutfit(cid, looktype, addons)
	LuaFunction: doSetCreatureDropLoot(cid, doDrop), use: doCreatureSetDropLoot(cid, doDrop)
	LuaFunction: doPlayerAddManaSpent(cid, mana), use: doPlayerAddSpentMana(cid, amount)
	LuaFunction: getPromotedVocation(vocId), use: getVocationInfo(id).promotedVocation
]

[ Fixed issues with...
	House warnings (OpenTibia SVN, Elf)
	High CPU usage (Everyone, OpenTibia SVN)
	Skill loss and item drop in [pvp-]zone area (Talaturen, Elf, OpenTibia SVN)
	Bed sleepers not being loaded (Elf)
	Items with 0 charges acting infinite (Elf, Kiper)
	Blessings (Talaturen, Elf)
	Crash when saving non-existing VIP (Elf)
	Huge writables crash-ability (Elf)
	Custom item attributes not displayed and/or crashing server (Elf)
	No timestamp in __GUI_LOGS__ (Elf)
	Item absorb abilities (Elf, OpenTibia SVN, Gesior)