@@ -39,6 +39,14 @@ enum CreatureEventType_t
 	CREATURE_EVENT_PREPAREDEATH
 };
 
+enum StatsChange_t
+{
+	STATSCHANGE_HEALTHGAIN,
+	STATSCHANGE_HEALTHLOSS,
+	STATSCHANGE_MANAGAIN,
+	STATSCHANGE_MANALOSS
+};
+
 class CreatureEvent;
 
 class CreatureEvents : public BaseEvents
@@ -88,6 +96,7 @@ class CreatureEvent : public Event
 		uint32_t executeOnThink(Creature* creature, uint32_t interval);
 		uint32_t executeOnAdvance(Player* player, skills_t skill, uint32_t oldLevel, uint32_t newLevel);
 		uint32_t executeOnLook(Player* player, const Position& position, uint8_t stackpos);
+		uint32_t executeOnStatsChange(Player* player, Player* attacker, StatsChange_t type, CombatType_t combat, int32_t value);
 		uint32_t executeOnAttack(Creature* creature, Creature* target);
 		uint32_t executeOnKill(Creature* creature, Creature* target);
 		uint32_t executeOnDeath(Creature* creature, Item* corpse, Creature* lastHitKiller, Creature* mostDamageKiller);
