@@ -292,6 +292,11 @@ PLAYERLOSS_MANA = 1
 PLAYERLOSS_SKILL = 2
 PLAYERLOSS_ITEMS = 3
 
+STATSCHANGE_HEALTHGAIN = 1
+STATSCHANGE_HEALTHLOSS = 2
+STATSCHANGE_MANAGAIN = 3
+STATSCHANGE_MANALOSS = 4
+
 SKILL_FIST = 0
 SKILL_CLUB = 1
 SKILL_SWORD = 2
@@ -392,6 +397,7 @@ RETURNVALUE_YOUNEEDAMAGICITEMTOCASTSPELL = 57
 RETURNVALUE_CANNOTCONJUREITEMHERE = 58
 RETURNVALUE_YOUNEEDTOSPLITYOURSPEARS = 59
 RETURNVALUE_NAMEISTOOAMBIGIOUS = 60
+RETURNVALUE_YOUARENOTTHEOWNER = 61
 
 ITEM_GOLD_COIN = 2148
 ITEM_PLATINUM_COIN = 2152
